--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -57,7 +57,7 @@
             <input type="text" class="form-control" id="subject" name="subject" required minlength="10" placeholder="min 10 karakter">
         </div>
 
-        <!-- Üzenet mező -->
+        <!-- Üzenet -->
         <div class="mb-3">
             <label for="message" class="form-label">Üzenet:</label>
             <textarea class="form-control" id="message" name="message" rows="4" required minlength="10" placeholder="min 10 karakter"></textarea>
