--- a/kultura.html
+++ b/kultura.html
@@ -16,6 +16,7 @@
         <a href="index.html">Főoldal</a>
         <a href="latnivalok.html">Látnivalók</a>
         <a href="gasztronomia.html">Gasztronómia</a>
+        <a href="irasrendszer.html">Írásrendszer</a>
         <a href="kultura.html">Kultúra</a>
         <a href="kapcsolat.html">Kapcsolat</a>
     </nav>
