--- a/gasztronomia.html
+++ b/gasztronomia.html
@@ -32,8 +32,10 @@
         <a href="index.html">Főoldal</a>
         <a href="latnivalok.html">Látnivalók</a>
         <a href="gasztronomia.html">Gasztronómia</a>
+        <a href="irasrendszer.html">Írásrendszer</a>
         <a href="kultura.html">Kultúra</a>
         <a href="kapcsolat.html">Kapcsolat</a>
+        
     </nav>
     <header>
         <h1>Japán Gasztronómia</h1>
