--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -1,77 +1,79 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kapcsolat</title>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!--CSS -->
-    <link rel="stylesheet" href="styles.css">
-    
-    <script src="validation.js" defer></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Kapcsolat</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
+  <script src="kapcsolat.js" defer></script>
 </head>
 <body>
 
-<nav class="text-center bg-light py-3">
+  <nav class="text-center bg-light py-3">
     <a href="index.html">Főoldal</a>
     <a href="latnivalok.html">Látnivalók</a>
     <a href="gasztronomia.html">Gasztronómia</a>
     <a href="irasrendszer.html">Írásrendszer</a>
     <a href="kultura.html">Kultúra</a>
     <a href="kapcsolat.html">Kapcsolat</a>
- </nav>
+  </nav>
 
-<header>
+  <header>
     <h1>Kapcsolat</h1>
     <p>Vegye fel velünk a kapcsolatot, ha bármilyen kérdése van Japánról!</p>
-</header>
+  </header>
 
-
-<section>
+  <section>
     <h2>Kapcsolati űrlap</h2>
-    <form id="contactForm" onsubmit="return validateForm()" method="POST">
-        <!-- Név mező -->
-        <div class="mb-3">
-            <label for="name" class="form-label">Név:</label>
-            <input type="text" class="form-control" id="name" name="name" required minlength="10" placeholder="min 10 karakter">
-            <div class="invalid-feedback">A névnek legalább 10 karakter hosszúnak kell lennie.</div>
-        </div>
+    <form id="contactForm" novalidate>
+      <!-- Név -->
+      <div class="mb-3">
+        <label for="name" class="form-label">Név:</label>
+        <input type="text" id="name" class="form-control" placeholder="min 10 karakter" />
+        <div class="invalid-feedback">Legalább 10 karakter szükséges.</div>
+        <div class="valid-feedback">✔ A megadott adat helyes.</div>
+      </div>
 
-        <!-- Email mező -->
-        <div class="mb-3">
-            <label for="email" class="form-label">Email cím:</label>
-            <input type="email" class="form-control" id="email" name="email" required placeholder="valami@valami.hu">
-            <div class="invalid-feedback">Kérem adjon meg egy érvényes email címet.</div>
-        </div>
+      <!-- Email -->
+      <div class="mb-3">
+        <label for="email" class="form-label">Email cím:</label>
+        <input type="email" id="email" class="form-control" placeholder="valami@valami.hu" />
+        <div class="invalid-feedback">Érvénytelen email cím.</div>
+        <div class="valid-feedback">✔ A megadott adat helyes.</div>
+      </div>
 
-        <!-- Telefonszám mező -->
-        <div class="mb-3">
-            <label for="phone" class="form-label">Telefonszám:</label>
-            <input type="text" id="phone" name="phone" class="form-control" placeholder="+36 20 123 4567">
-            <div class="invalid-feedback">A telefonszámnak a következő formátumban kell lennie: +36 20 123 4567.</div>
-        </div>
+      <!-- Telefonszám -->
+      <div class="mb-3">
+        <label for="phone" class="form-label">Telefonszám:</label>
+        <input type="text" id="phone" class="form-control" placeholder="+36 20 123 4567" />
+        <div class="invalid-feedback">Formátum: +36 20 123 4567.</div>
+        <div class="valid-feedback">✔ A megadott adat helyes.</div>
+      </div>
 
-        <!-- Téma mező -->
-        <div class="mb-3">
-            <label for="subject" class="form-label">Téma:</label>
-            <input type="text" class="form-control" id="subject" name="subject" required minlength="10" placeholder="min 10 karakter">
-        </div>
+      <!-- Téma -->
+      <div class="mb-3">
+        <label for="subject" class="form-label">Téma:</label>
+        <input type="text" id="subject" class="form-control" placeholder="min 10 karakter" />
+        <div class="invalid-feedback">Legalább 10 karakter szükséges.</div>
+        <div class="valid-feedback">✔ A megadott adat helyes.</div>
+      </div>
 
-        <!-- Üzenet -->
-        <div class="mb-3">
-            <label for="message" class="form-label">Üzenet:</label>
-            <textarea class="form-control" id="message" name="message" rows="4" required minlength="10" placeholder="min 10 karakter"></textarea>
-            <div class="invalid-feedback">Az üzenetnek legalább 10 karakter hosszúnak kell lennie.</div>
-        </div>
+      <!-- Üzenet -->
+      <div class="mb-3">
+        <label for="message" class="form-label">Üzenet:</label>
+        <textarea id="message" class="form-control" rows="4" placeholder="min 10 karakter"></textarea>
+        <div class="invalid-feedback">Legalább 10 karakter szükséges.</div>
+        <div class="valid-feedback">✔ A megadott adat helyes.</div>
+      </div>
 
-        <button type="submit" class="btn btn-primary">Küldés</button>
+      <button type="submit" class="btn btn-primary">Küldés</button>
     </form>
-</section>
+  </section>
 
-<footer>
+  <footer>
     <p>Érdekességek Japánról</p>
-</footer>
+  </footer>
 
 </body>
 </html>
