--- a/latnivalok.html
+++ b/latnivalok.html
@@ -27,8 +27,16 @@
     </header>
 
 
-
     <section>
+        <h2>Látnivalók</h2>
+        <p>Japán egyedülálló módon ötvözi a tradicionális kultúrát és a modern technológiát, a nyüzsgő nagyvárosokat és a
+            békés természeti tájakat. Az ország minden szeglete tartogat különleges látnivalókat: történelmi szentélyek,
+            világhírű városok, festői szigetek és különleges élmények várják az utazókat. Az alábbi válogatás olyan
+            helyszíneket mutat be, amelyek mind hozzájárulnak Japán varázsához – legyen szó a Byoudou-szentélyről, Hokkaido
+            vadregényes tájairól, a Tokiói torony modern látképéről, Nara barátságos szarvasairól vagy Kinosaki Onsen
+            hagyományőrző fürdőkultúrájáról.</p>
+
+        <hr>
         <h2>Byoudou-szentély</h2>
         <img src="./images/szentely.jpg" alt="Szentély">
         <p>Japán egyik legismertebb és legszebb szentélye Uji városában, Kyoto prefektúrában található.
@@ -50,7 +58,7 @@
             A Daisetsuzan Nemzeti Park hegyei és völgyei, a Shiretoko-félsziget vadregényes tájai, amely az UNESCO
             világörökségi listáján is szerepel, és a Furano virágos mezői csak néhány példa a sziget természeti
             kincseire.</p>
-            
+
         <hr>
         <h2>Tokio-torony</h2>
         <img src="./images/tokiotorony.jpg" alt="Tokio-torony">
