--- a/kultura.html
+++ b/kultura.html
@@ -44,10 +44,8 @@
         <p>A gésák hagyományos japán női előadóművészek, akik mesterszintű jártasságot szereznek a klasszikus zene,
             tánc, éneklés, valamint a kifinomult társalgás művészetében. Megjelenésük ikonikus: fehérre festett arc,
             élénk színű kimonó és jellegzetes hajviselet. A gésák elsősorban teaházakban vagy exkluzív rendezvényeken
-            szórakoztatják a vendégeket, miközben őrzik a hagyományos japán kultúra eleganciáját és udvariasságát.
-            Fontos megjegyezni, hogy a gésák nem azonosak a kurtizánokkal - hivatásuk a művészetekben és a kulturális
-            reprezentációban gyökerezik, és hosszú, szigorú képzés előzi meg pályafutásukat. A gésák ma is a japán
-            örökség élő szimbólumai.</p>
+            szórakoztatják a vendégeket, miközben őrzik a hagyományos japán kultúra eleganciáját és udvariasságát. A
+            gésák ma is a japán örökség élő szimbólumai.</p>
 
         <hr>
 
@@ -69,7 +67,7 @@
             életkortól, évszaktól és eseménytől függnek. A mai modern Japánban is gyakran viselik ünnepeken, például
             esküvőkön vagy fesztiválokon.</p>
 
-        
+
     </section>
 
     <footer>
